[package]
name = "cs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
